OAK-12053: minor improvements